LAST COMMIT FFS

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,6 +9,10 @@
     <p>Hello everybody, welcome to my page!</p>
     <p>/hello/name is going to show the message "Hello" written on the page, followed by the parameter "name" that you
         provide.</p>
+    <button class="btn btn-danger" href="/logout" onClick='document.location.href="/logout"'>
+        Logout
+    </button>
+
 </body>
 
 </html>
